[package]
name = "rust-docker-web"
version = "0.1.0"
authors = ["Rio Sanka <threehouse.second@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.1"
tokio = {version = "1.7.1", features = ["full"]}
